Fixed alignment in quiz page

--- a/client/components/quiz-page/_quiz.scss
+++ b/client/components/quiz-page/_quiz.scss
@@ -33,10 +33,9 @@
     -ms-transition: all 0.3s;
     transition: all 0.3s;
   }
-  &--level{
-    position: relative;
+  &--level{    
+    margin:0 auto;
     bottom: 1rem;
-
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
