--- a/client/sass/base/_typography.scss
+++ b/client/sass/base/_typography.scss
@@ -27,3 +27,13 @@ h6, .h6 {
 	@extend %heading_type;
 	font-size: $font-size-h6; 
 }
+
+.text-white{
+	color:#FFFFFF
+}
+.text-center{
+	text-align: center;
+}
+.font-14{
+	font-size: 1.4rem;
+}
