--- a/client/sass/components/_buttons.scss
+++ b/client/sass/components/_buttons.scss
@@ -71,7 +71,7 @@
           }
 
           &--challenge {
-            padding: 1.5rem !important;
+            padding: 1.2rem 2rem !important;
 
             &:hover {
               border: 1px solid #fff !important;
